tests/negative/typecheck/try_function_incompat.orng
fn main() -> Int {
    f() catch 0
}

fn f() -> Char!Int {
    let x = try g()
    .ok(x)
}

fn g() -> ()!Int {
    return .err
}